--- a/app/views/reports/project.html.erb
+++ b/app/views/reports/project.html.erb
@@ -6,10 +6,10 @@
 <% end %>
 
 <div class="span12">
-  <p>
+  <div id="index-controls">
     <%= link_to '<i class="icon-download-alt"></i> Genera RTF', project_report_path(@project, :format => "rtf"),  {:class => "rtf-project btn btn-small"} %>
     <%= link_to '<i class="icon-download-alt"></i> Genera PDF', project_report_path(@project, :format => "pdf"),  {:class => "pdf btn btn-small"}  %>
-  </p>
+  </div>
 
   <h1><%= @project.name %></h1>
   <% @project_fields.each do |attribute| %>
