--- a/app/views/units/_status_bar.html.erb
+++ b/app/views/units/_status_bar.html.erb
@@ -10,7 +10,7 @@
     <%= t('listing_units') %>:
     <% @fond.path_items.each_with_index do |item, index| %>
       <%= path_separator unless index == 0 %>
-      <%= link_to_unless (item.id == params[:fond_id].to_i, item.name, fond_units_path(item.id)) %>
+      <%= link_to_unless item.id == params[:fond_id].to_i, item.name, fond_units_path(item.id) %>
     <% end %>
   </h2>
   <div id="links">
